--- a/devobs/templates/base-new.html
+++ b/devobs/templates/base-new.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- END META SECTION -->
@@ -159,7 +160,14 @@
 <!-- END APP SCRIPTS -->
 <script src="../static/js/main.js" type="application/javascript"></script>
 <script src="../static/js/accounting.js" type="application/javascript"></script>
+<script src="../static/js/app_demo_editable.js"></script>
+<!-- THIS PAGE SCRIPTS -->
+<script type="text/javascript" src="../static/js/vendor/bootstrap-select/bootstrap-select.js"></script>
+<!--editable script-->
+<script src="../static/js/vendor/select2/select2.full.min.js"></script>
 
+<script src="../static/js/vendor/xeditable/bootstrap-editable.min.js"></script>
+<script src="../static/js/vendor/xeditable/ext/address.js"></script>
 {% block scripts %}
 
 {% endblock %}
