--- a/devobs/templates/index.html
+++ b/devobs/templates/index.html
@@ -91,7 +91,7 @@
     </nav>
 </div>
 <div class="logo">
-    <a href="index.html"><!--<i class="fa fa-inr" aria-hidden="true"></i>-->Devonshire <span>Lending</span></a>
+    <a href="/index"><!--<i class="fa fa-inr" aria-hidden="true"></i>-->Devonshire <span>Lending</span></a>
 </div>
 <!-- //Top-Bar -->
 <div class="banner-main jarallax">
@@ -196,30 +196,30 @@
                 <div class="col-md-4 service-grid-1">
                     <div class="service-grid-text">
                         <div class="icon">
-                            <a href="customerLogin.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+                            <a href="/login"><i class="fa fa-home" aria-hidden="true"></i></a>
                         </div>
-                        <a href="customerLogin.html"><h4>Manage your accounts</h4></a>
-                        <a href="customerLogin.html"><p>You can manage all of your Devonshire accounts after login. All
+                        <a href="/login"><h4>Manage your accounts</h4></a>
+                        <a href="/login"><p>You can manage all of your Devonshire accounts after login. All
                             recent activities and balances are available!</p></a>
                     </div>
                 </div>
                 <div class="col-md-4 service-grid-1">
                     <div class="service-grid-text">
                         <div class="icon">
-                            <a href="customerLogin.html"><i class="fa fa-money" aria-hidden="true"></i></a>
+                            <a href="/login"><i class="fa fa-money" aria-hidden="true"></i></a>
                         </div>
-                        <a href="customerLogin.html"><h4>Transfer funds</h4></a>
-                        <a href="customerLogin.html"><p>You can easily transfer funds between your own accounts or to
+                        <a href="/login"><h4>Transfer funds</h4></a>
+                        <a href="/login"><p>You can easily transfer funds between your own accounts or to
                             others with Devonshire accounts. </p></a>
                     </div>
                 </div>
                 <div class="col-md-4 service-grid-1">
                     <div class="service-grid-text">
                         <div class="icon">
-                            <a href="customerLogin.html"><i class="fa fa-university" aria-hidden="true"></i></a>
+                            <a href="/login"><i class="fa fa-university" aria-hidden="true"></i></a>
                         </div>
-                        <a href="customerLogin.html"><h4>Bill pay</h4></a>
-                        <a href="customerLogin.html"><p>Pay your bill with just one step! You can also set a payment
+                        <a href="/login"><h4>Bill pay</h4></a>
+                        <a href="/login"><p>Pay your bill with just one step! You can also set a payment
                             with a specific time conveniently.</p></a>
                     </div>
                 </div>
@@ -229,10 +229,10 @@
                 <div class="col-md-4 service-grid-1">
                     <div class="service-grid-text">
                         <div class="icon">
-                            <a href="customerLogin.html"><i class="fa fa-usd" aria-hidden="true"></i>
+                            <a href="/login"><i class="fa fa-usd" aria-hidden="true"></i>
                             </a>
-                            <a href="customerLogin.html"><h4>Deposit</h4></a>
-                            <a href="customerLogin.html"><p>You can simply finish your deposit by filling a form and
+                            <a href="/login"><h4>Deposit</h4></a>
+                            <a href="/login"><p>You can simply finish your deposit by filling a form and
                                 upload
                                 a picture. No need to go to physical branch anymore!</p></a>
                         </div>
@@ -241,20 +241,20 @@
                 <div class="col-md-4 service-grid-1">
                     <div class="service-grid-text">
                         <div class="icon">
-                            <a href="customerLogin.html"><i class="fa fa-briefcase" aria-hidden="true"></i></a>
+                            <a href="/login"><i class="fa fa-briefcase" aria-hidden="true"></i></a>
                         </div>
-                        <a href="customerLogin.html"><h4>Loans</h4></a>
-                        <a href="customerLogin.html"><p>Currently we are providing personal loans, including student
+                        <a href="/login"><h4>Loans</h4></a>
+                        <a href="/login"><p>Currently we are providing personal loans, including student
                             loans and home equity loans. Apply today, get it in a few days!</p></a>
                     </div>
                 </div>
                 <div class="col-md-4 service-grid-1">
                     <div class="service-grid-text">
                         <div class="icon">
-                            <a href="customerLogin.html"><i class="fa fa-unlock" aria-hidden="true"></i></a>
+                            <a href="/login"><i class="fa fa-unlock" aria-hidden="true"></i></a>
                         </div>
-                        <a href="customerLogin.html"><h4>More...</h4></a>
-                        <a href="customerLogin.html"><p>In the near future, we will provide all services that are
+                        <a href="/login"><h4>More...</h4></a>
+                        <a href="/login"><p>In the near future, we will provide all services that are
                             available in physical branches! </p></a>
                     </div>
                 </div>
