--- a/devobs/templates/loan-summary.html
+++ b/devobs/templates/loan-summary.html
@@ -15,7 +15,7 @@
                         <h3 class="tile-title">Student Loan</h3>
                         <p>Manage your student loan debt with Devonshire Lending – available for qualified borrowers who
                             wish to combine their federal and/or private student loans into a single payment.</p>
-                        <a href="pages-bank-student-loan.html" class="btn btn-default">Apply</a>
+                        <a href="/loan-student" class="btn btn-default">Apply</a>
                     </div>
                 </div>
             </div>
@@ -29,7 +29,7 @@
                         <p>For those who want to borrow a specific amount, and desire the stability of a fixed rate,
                             term, and monthly payment.Leverage your home's equity with Devonshire's Home Equity
                             Loans.</p>
-                        <a href="pages-bank-home-loan.html" class="btn btn-default">Apply</a>
+                        <a href="/loan-equity" class="btn btn-default">Apply</a>
                     </div>
                 </div>
             </div>
@@ -42,7 +42,7 @@
                         <h3 class="tile-title">Auto Loan</h3>
                         <p>Take advantage of a great rate on a Devonshire auto loan. Apply online to lower your car
                             payment and get a better interest rate. Get the financing you need for the car you want.</p>
-                        <a href="pages-bank-auto-loan.html" class="btn btn-default">Apply</a>
+                        <a href="/loan-auto" class="btn btn-default">Apply</a>
                     </div>
                 </div>
             </div>
