--- a/devobs/templates/transfer-other.html
+++ b/devobs/templates/transfer-other.html
@@ -28,7 +28,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Recipient</label>
-                                    <input  name="toAccount" type="text" class="mask_credit form-control"
+                                    <input  id="toAccount" name="toAccount" type="text" class="form-control"
                                            placeholder="Account Number" required>
                                 </div>
                             </div>
