Minor cosmetic changes to loan pages

--- a/devobs/templates/loan-equity.html
+++ b/devobs/templates/loan-equity.html
@@ -20,83 +20,83 @@
                 <form class="form-horizontal">
                     <div class="form-group">
                         <div class="radio">
-                            <label class="col-md-5 control-label">Do you intend to apply for joint credit with a
+                            <label class="col-md-2 control-label">Do you intend to apply for joint credit with a
                                 co-applicant?</label>
-                            <label><input type="radio" name="optionsRadios" id="" value="">Yes</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <label><input type="radio" name="optionsRadios" id="" value="">No</label>
+                            <label><input type="radio" name="joint" id="" value="">Yes</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <label><input type="radio" name="joint" id="" value="">No</label>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="radio">
-                            <label class="col-md-5 control-label">If yes, does the co-applicant intend to apply for
+                            <label class="col-md-2 control-label">If yes, does the co-applicant intend to apply for
                                 joint credit and has the co-applicant given you permission to apply jointly on her or
                                 his behalf?</label>
                             <label>
-                                <input type="radio" name="optionsRadios" id="" value="" checked="checked">Yes </label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                <input type="radio" name="permission" id="" value="" checked="checked">Yes </label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <label>
-                                <input type="radio" name="optionsRadios" id="" value="">No
+                                <input type="radio" name="permission" id="" value="">No
                             </label>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-2 control-label">Loan Amount:</label>
                         <div class="col-md-6">
-                            <input type="text" class="form-control" placeholder="Enter ..." id="" name="" required>
+                            <input type="text" class="form-control" id="" name="" required>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-2 control-label">What is the purpose of your loan?</label>
                         <div class="col-md-6">
                             <select class="form-control" id="" name="" required>
-                                <option>Buy Second Home</option>
-                                <option>Home Improvement</option>
-                                <option>Refinance Mortgage</option>
-                                <option>Debt Consolidation</option>
-                                <option>Business</option>
-                                <option>Other</option>
+                                <option value="Buy Second Home">Buy Second Home</option>
+                                <option value="Home Improvement">Home Improvement</option>
+                                <option value="Refinance Mortgage">Refinance Mortgage</option>
+                                <option value="Debt Consolidation">Debt Consolidation</option>
+                                <option value="Business">Business</option>
+                                <option value="Other">Other</option>
                             </select>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-2 control-label">First Name:</label>
                         <div class="col-md-4">
-                            <input type="text" class="form-control" placeholder="Enter ..." id="" name="" required>
+                            <input type="text" class="form-control" id="" name="" required>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-2 control-label">Last Name:</label>
                         <div class="col-md-4">
-                            <input type="text" class="form-control" placeholder="Enter ..." id="" name="" required>
+                            <input type="text" class="form-control" id="" name="" required>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-2 control-label">Applicant Gross Annual Income:</label>
                         <div class="col-md-4">
-                            <input type="text" class="form-control" placeholder="Enter ..." id="" name="" required>
+                            <input type="text" class="form-control" id="" name="" required>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-2 control-label">Current Employer:</label>
                         <div class="col-md-10">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id="" name="" required>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-2 control-label">Work Address:</label>
                         <div class="col-md-10">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id="" name="" required>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-2 control-label">Work Telephone:</label>
                         <div class="col-md-3">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id="" name="" required>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-2 control-label">Address 1</label>
                         <div class="col-md-10">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id="" name="" required>
                         </div>
                     </div>
                     <div class="form-group">
@@ -108,7 +108,7 @@
                     <div class="form-group">
                         <label class="col-md-2 control-label">City</label>
                         <div class="col-md-3">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id="" name="" required>
                         </div>
                     </div>
                     <div class="form-group">
@@ -172,29 +172,29 @@
                     <div class="form-group">
                         <label class="col-md-2 control-label">Zip Code</label>
                         <div class="col-md-3">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id="" name="" required>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="radio">
-                            <label class="col-md-5 control-label">Is the home you are using as collateral your primary
+                            <label class="col-md-2 control-label">Is the home you are using as collateral your primary
                                 residence?</label>
-                            <label><input type="radio" name="optionsRadios" id="" value="" checked="checked">Yes</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <label><input type="radio" name="optionsRadios" id="" value="">No</label>
+                            <label><input type="radio" name="collateral" id="" value="" checked="checked">Yes</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <label><input type="radio" name="collageral" id="" value="">No</label>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="radio">
-                            <label class="col-md-5 control-label">Is your mailing address the same as the collateral
+                            <label class="col-md-2 control-label">Is your mailing address the same as the collateral
                                 address?</label>
-                            <label><input type="radio" name="optionsRadios" id="" value="" checked="checked">Yes</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                            <label><input type="radio" name="optionsRadios" id="" value="">No</label>
+                            <label><input type="radio" name="address" id="" value="" checked="checked">Yes</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <label><input type="radio" name="address" id="" value="">No</label>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-2 control-label">Market Value:</label>
                         <div class="col-md-4">
-                            <input type="text" class="form-control" placeholder="Enter ..." id="" name="" required>
+                            <input type="text" class="form-control" id="" name="" required>
                         </div>
                     </div>
                     <p>
