--- a/devobs/templates/loan-auto.html
+++ b/devobs/templates/loan-auto.html
@@ -15,10 +15,11 @@
                     </div>
                 </div>
 
+                <form class="form-horizontal">
                 <div class="form-group">
                     <label class="col-md-2 control-label">Loan Amount:</label>
                     <div class="col-md-6">
-                        <input type="text" class="form-control" placeholder="Enter ..." id="" name="" required>
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
@@ -36,43 +37,43 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label">First Name:</label>
                     <div class="col-md-4">
-                        <input type="text" class="form-control" placeholder="Enter ..." id="" name="" required>
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Last Name:</label>
                     <div class="col-md-4">
-                        <input type="text" class="form-control" placeholder="Enter ..." id="" name="" required>
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Applicant Gross Annual Income:</label>
                     <div class="col-md-4">
-                        <input type="text" class="form-control" placeholder="Enter ..." id="" name="" required>
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Current Employer:</label>
                     <div class="col-md-10">
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Work Address:</label>
                     <div class="col-md-10">
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Work Telephone:</label>
                     <div class="col-md-3">
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Current Address 1</label>
                     <div class="col-md-10">
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
@@ -84,7 +85,7 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label">Current City</label>
                     <div class="col-md-3">
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
@@ -148,37 +149,37 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label">Current Zip Code</label>
                     <div class="col-md-3">
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Model Year:</label>
                     <div class="col-md-4">
-                        <input type="text" class="form-control" placeholder="Enter ..." id="" name="" required>
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Manufacturer:</label>
                     <div class="col-md-4">
-                        <input type="text" class="form-control" placeholder="Enter ..." id="" name="" required>
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Model Type:</label>
                     <div class="col-md-4">
-                        <input type="text" class="form-control" placeholder="Enter ..." id="" name="" required>
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Selling Price:</label>
                     <div class="col-md-4">
-                        <input type="text" class="form-control" placeholder="Enter ..." id="" name="" required>
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-2 control-label">Downpayment:</label>
                     <div class="col-md-4">
-                        <input type="text" class="form-control" placeholder="Enter ..." id="" name="" required>
+                        <input type="text" class="form-control" id="" name="" required>
                     </div>
                 </div>
                 <div class="form-group">
