--- a/devobs/templates/customerLogin.html
+++ b/devobs/templates/customerLogin.html
@@ -31,7 +31,7 @@
                 <div class="subtitle">Login and access to all services</div>
             </div>
             <div class="app-login-box-container">
-                <form action="/api/user/login" method="post" id="form_login">
+                <form action="/api/user/login" method="post" id="form-login">
                     <div class="form-group">
                         <input type="text" class="form-control" name="username" id="username" placeholder="Username" required>
                     </div>
@@ -39,7 +39,7 @@
                         <input type="password" class="form-control" name="password" id="password"
                                placeholder="Password" required>
                     </div>
-                    <div id="alert_login" class="alert alert-danger alert-icon-block alert-dismissible" role="alert"
+                    <div id="alert-login" class="alert alert-danger alert-icon-block alert-dismissible" role="alert"
                          style="display: none">
 
                     </div>
@@ -81,7 +81,7 @@
 </div>
 <!-- END APP WRAPPER -->
 <!-- MODAL CHANGE PIN -->
-<div class="modal fade" id="modal-security-question" tabindex="-1" role="dialog">
+<div class="modal fade" id="modal-login" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"
                                                                                           class="icon-cross"></span>
@@ -93,35 +93,34 @@
                 <div class="app-heading app-heading-small app-heading-condensed margin-bottom-30">
                     <div class="title">
                         <h5>Security Question</h5>
-                        <p>Answer your secret question</p>
                     </div>
                 </div>
 
-                <form action="#" method="post">
+                <form action="#" method="post" id="form-login-secure">
                     <div class="form-group">
                         <div class="row">
                             <div class="col-md-12">
                                 <label>Question</label>
-                                <select class="bs-select" name="question" disabled>
-                                    <option value="1">Name of your first pet?</option>
-
-                                </select>
+                                <input type="text" class="form-control"  id="securityQuestion" readonly>
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="row">
                             <div class="col-md-12">
-                                <label>Your Answer</label>
-                                <input type="text" class="form-control" name="answer">
-                                <span class="help-block">Be honest in your answer</span>
+                                <label>Answer</label>
+                                <input type="text" class="form-control" name="securityAnswer" id="securityAnswer">
                             </div>
                         </div>
                     </div>
+                    <div id="alert-login-secure" class="alert alert-danger alert-icon-block alert-dismissible"
+                             role="alert"
+                             style="display: none">
+                        </div>
                     <div class="form-group">
                         <div class="row">
                             <div class="col-md-12">
-                                <button type="button" class="btn btn-default pull-right">Submit</button>
+                                <button type="submit" class="btn btn-default pull-right">Submit</button>
                             </div>
                         </div>
                     </div>
@@ -168,7 +167,7 @@
 <!-- END APP SCRIPTS -->
 <script>
     $(function () {
-        $("#form_login").submit(function (event) {
+        $("#form-login").submit(function (event) {
             event.preventDefault();
 
             var username = $("#username").val();
@@ -181,15 +180,66 @@
                 dataType: "json",
                 success: function (res) {
                     if (res.status == 0) {
-                        window.location.href = "/account-summary";
+                        $("#securityQuestion").val(res.data["securityQuestion"]);
+                        $("#modal-login").modal();
                     } else {
-                        $(alert_login).html(res.message);
-                        $(alert_login).show();
+                        $("#alert-login").html(res.message);
+                        $("#alert-login").show();
                     }
                 }
             })
         })
-    })
+
+        $("#form-login-secure").submit(function (event) {
+            event.preventDefault();
+
+            var username = $("#username").val();
+            var password = $("#password").val();
+            var securityAnswer = $("#securityAnswer").val();
+
+            $.ajax({
+                url: "/api/user/login_after_check",
+                type: "POST",
+                data: {
+                    "username": username,
+                    "password": password,
+                    "securityAnswer": securityAnswer
+                },
+                dataType: "json",
+                success: function (res) {
+                    if (res.status == 0) {
+                        window.location.href = "/account-summary";
+                    } else {
+                        $("#alert-login-secure").html(res.message);
+                        $("#alert-login-secure").show();
+                    }
+                }
+            })
+        })
+    });
+{#    $(function () {#}
+{#        $("#form_login").submit(function (event) {#}
+{#            event.preventDefault();#}
+{##}
+{#            var username = $("#username").val();#}
+{#            var password = $("#password").val();#}
+{##}
+{#            $.ajax({#}
+{#                url: "/api/user/login",#}
+{#                type: "POST",#}
+{#                data: "username=" + username + "&password=" + password,#}
+{#                dataType: "json",#}
+{#                success: function (res) {#}
+{#                    if (res.status == 0) {#}
+{#                        window.location.href = "/account-summary";#}
+{#                    } else {#}
+{#                        $(alert_login).html(res.message);#}
+{#                        $(alert_login).show();#}
+{#                    }#}
+{#                }#}
+{#            })#}
+{#        })#}
+{#    })#}
 
 </script>
 </body>
